--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 multidict==6.1.0
-mysqlclient==2.2.7
 propcache==0.2.1
+psycopg2-binary==2.9.10
 pyTelegramBotAPI==4.26.0
 requests==2.32.3
 requests-toolbelt==1.0.0
