--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ multidict==6.1.0
 propcache==0.2.1
 psycopg2-binary==2.9.10
 pyTelegramBotAPI==4.26.0
+python-dotenv==1.0.1
 requests==2.32.3
 requests-toolbelt==1.0.0
 sniffio==1.3.1
